Fix critical issues for iDempiere 13 compatibility
- Fix SQL injection vulnerabilities in MPProcessOT.java and CalloutAssetMPLog.java
  using parameterized queries
- Replace deprecated BigDecimal.ROUND_HALF_EVEN with RoundingMode.HALF_EVEN
- Replace hardcoded Oracle SYSDATE with DB-agnostic stringDate variable
- Replace deprecated Boolean/Integer constructors with Boolean.FALSE and Integer.valueOf()

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>